# sciplot

./: .gitignore  README.md  pyproject.toml  sciplot.py  temp.py  test.py
diegoplot/: __init__.py  diegoplot.py
src/sciplot/: __init__.py
test/: test_diegoplot.py
