[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sciplot"
version = "1.0"
authors = [
  { name="diego", email="caikaidi@caikaidi.cn" },
]
description = "A scientific style plot tool based on matplotlib."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
    "cycler",
    "typing",
]

[project.urls]
"Homepage" = "https://github.com/caikaidi/sciplot"
"Bug Tracker" = "https://github.com/caikaidi/sciplot/issues"